crates/carta/tests/snapshots/golden_writer__latex__figure__figure-no-alt.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\pandocbounded{\includegraphics[keepaspectratio]{pic.png}}
