crates/carta/tests/snapshots/golden_writer__latex__figure__figure-with-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{figure}
\centering
\includegraphics[width=2.08333in,height=\textheight,keepaspectratio,alt={alt text}]{pic.png}
\caption{alt text}
\end{figure}
